overflow issue resolved, magnify js, mobile cards,videos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,6 @@
     transform:rotate(-90deg) translateY(10px);
 }
 
-
 /* horizontal-slider */
 
 .horizontal-corousal-img{
@@ -108,18 +107,49 @@
     font-size: 16px;
 }
 .horizontal-slider{
-    min-width: 520px;
+    max-width: 520px;
     width: 100% ;
 }
-.horizontal-next::before{
+/* .horizontal-next::before{
     transform: translateX(-40px);
 }
 .horizontal-prev::before{
     transform: translateX(70px);
-}
+} */
 .carousel-item{
     max-width: 99%;
     width: 100%;
+}
+.carousel-control-next-icon,.carousel-control-prev-icon 
+{
+    display: none;   
+}
+
+.vertical-prev:before {
+    content: "\f104";
+    font-family: FontAwesome;
+    color: #cdcdcf;
+    font-size: 48px;
+}
+.vertical-next:before {
+    content: "\f105";
+    font-family: FontAwesome;
+    color: #cdcdcf;
+    font-size: 48px;
+}
+.horizontal-next::before{
+    content: "\f105";
+    font-family: FontAwesome;
+    color: #000000;
+    font-size: 48px;
+    font-weight: normal;
+}
+.horizontal-prev::before{
+    content: "\f104";
+    font-family: FontAwesome;
+    color: #000000;
+    font-size: 48px;
+    font-weight: normal;
 }
 
 
@@ -139,7 +169,7 @@
     font-size:13px;
 }
 .zoom-section{
-    max-width:400px ;
+    max-width:30% ;
     width: 100%; 
 }
 .zoom-img{
@@ -148,6 +178,21 @@
     min-height:450px;
     height: 100%;
 }
+
+#image-selected{
+    overflow: hidden;
+}
+
+#image-selected img {
+    cursor: zoom-in;
+    transition: transform 0.25s ease;
+}
+
+#image-selected img.magnify {
+    cursor: zoom-out;
+}
+
+
 
 
 /* Bottom banner image */
@@ -173,7 +218,7 @@
     color: var(--light-dark-blue );
 }
 .tab-one-time-purchase{
-    min-width: 310px;
+    min-width: 295px;
     width: 100% ;
     min-height:55px ;
     height: 100% ;
@@ -181,7 +226,7 @@
     border: 2px solid var(--light-dark-blue);  
 }
 .subscribe-tab{
-    min-width:310px ;
+    min-width:290px ;
     width: 100%;
     min-height: 55px;
     height: 100%;
@@ -192,7 +237,7 @@
 .card{
     border-radius: 0;
     border-color:var(--light-dark-blue ) ;
-    min-width: 190px;
+    max-width: 190px;
     width: 100%;
     min-height:270px;
     height: 100%;
@@ -322,6 +367,7 @@
 }
 
 
+
 /* Review feedback section */
 
 .featured-review-head{
@@ -379,14 +425,14 @@
 /* Videos styling */
 
 .custom-embed {
-    min-width: 100%;
+    max-width: 100%;
     width: 100%; 
     min-height:480px ;
     height: 100%; 
     margin: auto; 
 }
 .custom-embed-bottom {
-    min-width:  95%;
+    max-width: 100%;
     width: 100%; 
     min-height:190px ;
     height: 100%; 
@@ -394,6 +440,7 @@
 
 
 @media (min-width: 1281px) and (max-width:1300px) {
+
 
 }
 
@@ -405,40 +452,30 @@
         height: 100%;
     }
     .package-cards{
+        max-width: 48%;
+        width: 100%;
+    }
+    .tab-one-time-purchase, .subscribe-tab{
+        min-width: 230px;
+        width: 100%;
+    }
+
+    .display-one-time-purchase{
         max-width: 40%;
         width: 100%;
     }
-    .tab-one-time-purchase{
-        min-width: 240px;
-        width: 100%;
-    }
-    .subscribe-tab{
-        min-width: 240px;
-        width: 100%;
-    }
+
+.num-pack{
+    font-size: 28px;
+}
+
+
     .card{
-        min-width:160px ;
-        width:100% ;
-        min-height: 270px;
-        height: 100%;
-    }
-    .card-popular{
-        min-width:170px ;
-        width: 100% ;
-        min-height: 320px;
-        height: 100%;
-    }
-    .btn-flavor{
-        max-width: 110px;
-        width: 100%;
-        font-size: 16px;
-        max-height: 60px;
-        height: 100%;
-    }
-    .bottom-banner-img{
-        max-width: 300px;
+        min-width: 165px;
         width: 100%;
     }
+
+
 }
 
 @media (max-width: 980px) {
@@ -501,7 +538,10 @@
         font-size: 16px;
     }
     .num-pack{
-        font-size: 16px;
+        font-size: 14px;
+    }
+    .free-shipping {
+        font-size: 13px;
     }
     .btn-flavor{
         min-width: 120px;
@@ -530,6 +570,10 @@
     .card-subscribe-three{
         max-height:  170px;
         height: 100%;    }
+
+    .weeks{
+        line-height: 0;
+    }
     .sale-cut{
         font-size:25px;
     }
@@ -540,28 +584,35 @@
         max-width: 50%;
         width: 100%;
     }
+
+    .horizontal-slider {
+        width: 100%;
+    }
+
     .vertical-corousal-medium-img{
         min-height: 340px;
         height: 100%;
         min-width: 300px;
         width: 100%;
     }
-    .carousel-control-next-icon {
-        background-image: none;
+     .carousel-control-next-icon,.carousel-control-prev-icon 
+    {
+        display: none;   
     }
-    .carousel-control-prev-icon {
-        background-image: none;
-    }
+
     .carousel-indicators [data-bs-target]{
         border-radius: 50%;
         width: 10px;
         height: 10px;
         background-color: rgb(225, 224, 224);
         transform: translateY(30px);
-    }
+    } 
+
     /* .corousal-indicators .active [data-bs-target]{
         background-color: var(--light-dark-blue) ;
     } */
+
+   
     .vertical-prev:before {
         content: "\f104";
         font-family: FontAwesome;
@@ -614,8 +665,10 @@
         font-weight: normal;
     }   
     .vertical-seperator-main{
-        max-width: 100%;
+        max-width: 95%;
         width:100%;
+        height: 15px;
+       
     } 
     .vertical-seperator {
         position: relative;
@@ -645,17 +698,12 @@
       }
 
       .custom-embed{
-        width: 100%;
-        max-width: 100%;
+        min-height: 260px;
+        height: 100%;
       }
-      .custom-embed-bottom{
-        width: 100%;
-        max-width: 100%;
-        transform: translateY(-150px);
-      }
+      
       .package-cards{
-        max-width: 400px;
+        max-width: 480px;
         width: 100%;
       }
-
-}
+  }
